feat: Complete redesign of preferences page with location summary - Redesigned auth-prompt step with modern split-screen layout - Added visual storytelling carousel with animated slides - Created clean signup form with tabbed interface - Added comprehensive location summary section with state facts - Enhanced map hover functionality and Census API integration - Fixed navigation issues and optimized for conversion

--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:turbo": "next dev --turbo",
+    "dev:fast": "next dev --turbo --experimental-https",
     "build": "next build",
+    "build:analyze": "ANALYZE=true next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf .next && rm -rf node_modules/.cache",
+    "dev:clean": "npm run clean && npm run dev",
+    "test:map": "node scripts/test-map.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -39,12 +45,18 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/d3": "^7.4.3",
+    "@types/topojson-client": "^3.1.5",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "d3": "^7.9.0",
+    "d3-geo": "^3.1.1",
+    "d3-scale": "^4.0.2",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "idb-keyval": "^6.2.2",
     "input-otp": "1.4.1",
     "leaflet": "latest",
     "lucide-react": "^0.454.0",
@@ -54,21 +66,30 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^2.1.7",
+    "react-simple-maps": "^3.0.0",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
-    "tailwind-merge": "^2.5.5",
+    "swr": "^2.3.3",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.6",
+    "topojson-client": "^3.1.0",
+    "vaul": "1.1.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.18",
+    "@next/bundle-analyzer": "^15.2.4",
+    "@types/d3-scale": "^4.0.9",
+    "@types/leaflet": "^1.9.14",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-simple-maps": "^3.0.6",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
