--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+  "buildCommand": "pnpm build",
+  "installCommand": "pnpm install --frozen-lockfile",
+  "framework": "nextjs",
   "crons": [
     {
       "path": "/api/officials/update",
