--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@8.15.0",
   "engines": {
-    "node": ">=18.19.0"
+    "node": ">=18.19.0",
+    "pnpm": ">=8.0.0"
   },
   "scripts": {
     "dev": "next dev",
