Fix build errors: exclude counties/init API route and add Vercel Analytics
- Add @vercel/analytics package and integrate Analytics component in layout
- Exclude app/api/counties/init/ from deployment to resolve Supabase initialization errors
- Build now passes successfully with all core functionality intact

--- a/.vercelignore
+++ b/.vercelignore
@@ -36,4 +36,5 @@ app/api/reports/
 app/api/sync/
 app/api/officials/add/
 app/api/officials/pa-senators/
-app/api/counties/setup/ 
+app/api/counties/setup/
+app/api/counties/init/ 
