--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@supabase/supabase-js": "latest",
     "@types/d3": "^7.4.3",
     "@types/topojson-client": "^3.1.5",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
