Exclude all officials-api related routes from deployment
- Add app/api/officials/route.ts, test/, and update/ to .vercelignore
- These routes import from lib/officials-api which has module-level Supabase initialization
- Should resolve remaining 'supabaseUrl is required' build errors

--- a/.vercelignore
+++ b/.vercelignore
@@ -35,6 +35,10 @@ app/api/cron/
 app/api/reports/
 app/api/sync/
 app/api/officials/add/
+app/api/officials/init/
 app/api/officials/pa-senators/
+app/api/officials/route.ts
+app/api/officials/test/
+app/api/officials/update/
 app/api/counties/setup/
 app/api/counties/init/ 
