--- a/package.json
+++ b/package.json
@@ -82,7 +82,9 @@
     "tailwindcss-animate": "^1.0.7",
     "topojson-client": "^3.1.0",
     "vaul": "1.1.1",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^15.2.4",
@@ -94,8 +96,6 @@
     "@types/react-simple-maps": "^3.0.6",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
